--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmit": false,
     "esModuleInterop": true,
     "strict": true,
+    "resolveJsonModule": true,
   },
   "include": ["src/**/*", ".env"],
   "exclude": ["node_modules"]
