--- a/config/User.yml
+++ b/config/User.yml
@@ -14,6 +14,6 @@ properties:
 relations: 
   restaurants:
     model: Restaurant
-    type: hasOne
+    type: belongsTo
     options: 
       as: restaurant
