--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test:unit": "ENV_FILE=./.env.test jest"
   },
   "prettier": {
     "printWidth": 80,
@@ -46,6 +47,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/hpp": "^0.2.1",
+    "@types/jest": "^26.0.22",
     "@types/morgan": "^1.9.2",
     "@types/sequelize": "^4.28.9",
     "@types/swagger-ui-express": "^4.1.2",
@@ -58,8 +60,10 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   }
 }
