--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "Daniel Pfisterer (info@daniel-pfisterer.de)",
   "license": "ISC",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production node build/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon --inspect",
     "build": "tsc",
-    "test": "jest --forceExit --detectOpenHandles",
-    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
+    "dev": "cross-env NODE_ENV=development nodemon --inspect",
+    "jest": "jest --forceExit --detectOpenHandles",
     "lint:fix": "npm run lint -- --fix",
-    "test:unit": "ENV_FILE=./.env.test jest"
+    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
+    "start": "npm run build && cross-env NODE_ENV=production node build/server.js",
+    "test": "ENV_FILE=./.env.test jest",
+    "test:watch": "ENV_FILE=./.env.test jest --watch"
   },
   "prettier": {
     "printWidth": 80,
@@ -27,6 +28,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
@@ -45,6 +47,7 @@
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/hpp": "^0.2.1",
     "@types/jest": "^26.0.22",
@@ -61,6 +64,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "jshint": "^2.12.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
