Use database setting from .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 JAXA_CONFIGURATION_PATH=config
+
+JAXA_DATABASE=db
+JAXA_DATABASE_USER=user
+JAXA_DATABASE_PASSWORD=
+JAXA_DATABASE_HOST=localhost
+JAXA_DATABASE_DIALECT=sqlite
+JAXA_DATABASE_STORAGE=temp
