prepare for publishing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,26 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "lib": ["es2020", "dom", "esnext.asynciterable"],
-    "typeRoots": ["./node_modules/@types"],
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "pretty": true,
-    "sourceMap": true,
-    "outDir": "./build",
+  "compilerOptions": {                
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,                        
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true ,       
+    "lib": ["es2020", "dom", "esnext.asynciterable"],
+    "module": "commonjs",                           
+    "moduleResolution": "node",             
     "noEmit": false,
-    "esModuleInterop": true,
-    "strict": true,
+    "outDir": "./build",                              
+    "pretty": true,
     "resolveJsonModule": true,
+    "rootDir": "./src",         
+    "skipLibCheck": true,                           
+    "sourceMap": true,
+    "strict": true,
+    "target": "ES2020",                                
+    "typeRoots": ["./node_modules/@types"],                  
   },
   "include": ["src/**/*", ".env"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/**/*__tests__"]
 }
