--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "jaxa",
   "description": "Just another express application framework",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "author": "Daniel Pfisterer (info@daniel-pfisterer.de)",
   "license": "ISC",
   "scripts": {
@@ -24,7 +25,6 @@
     "arrowParents": "avoid"
   },
   "dependencies": {
-    "@types/http-errors": "^1.8.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -32,7 +32,6 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
-    "kill-port": "^1.6.1",
     "morgan": "^1.10.0",
     "openapi-types": "^7.2.3",
     "sequelize": "^6.6.2",
@@ -50,6 +49,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/hpp": "^0.2.1",
+    "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.22",
     "@types/morgan": "^1.9.2",
     "@types/sequelize": "^4.28.9",
