--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
+    "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "openapi-types": "^7.2.3",
     "sequelize": "^6.6.2",
