--- a/src/Utils/__tests__/fixtures/model.yml
+++ b/src/Utils/__tests__/fixtures/model.yml
@@ -4,7 +4,7 @@ definition:
   plural: models
   type: persisted
 properties: 
-  name:
+  firstName:
     type: string
     required: true
   number: 
