--- a/package.json
+++ b/package.json
@@ -1,94 +1,7 @@
 {
   "name": "jaxa",
-  "description": "Just another express application framework",
-  "keywords": [
-    "express",
-    "framework",
-    "typescript",
-    "sequelize",
-    "swagger"
-  ],
-  "version": "1.0.0-alpha.2",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
-  "author": "Daniel Pfisterer (info@daniel-pfisterer.de)",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pure180/jaxa.git"
-  },
-  "bugs": {
-    "url": "https://github.com/pure180/jaxa/issues"
-  },
-  "homepage": "https://github.com/pure180/jaxa/issues",
-  "scripts": {
-    "build": "tsc",
-    "dev": "cross-env NODE_ENV=development nodemon --inspect",
-    "jest": "jest --forceExit --detectOpenHandles",
-    "lint:fix": "yarn lint --fix",
-    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
-    "postversion": "git push && git push --tags",
-    "prepare": "yarn build",
-    "prepublishOnly": "yarn test && yarn lint",
-    "preversion": "yarn lint",
-    "start": "npm run build && cross-env NODE_ENV=production node build/server.js",
-    "test:watch": "cross-env ENV_FILE=./.env.test jest --watch",
-    "test": "cross-env ENV_FILE=./.env.test jest",
-    "version": "git add -A src"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "tabWidth": 2,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "semi": true,
-    "arrowParents": "avoid"
-  },
-  "dependencies": {
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.4.1",
-    "hpp": "^0.2.3",
-    "http-errors": "^1.8.0",
-    "morgan": "^1.10.0",
-    "openapi-types": "^7.2.3",
-    "sequelize": "^6.6.2",
-    "sqlite3": "^5.0.2",
-    "swagger-ui-express": "^4.1.6",
-    "ts-node": "^9.1.1",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.1",
-    "yaml": "^1.10.2"
-  },
+  "private": true,
   "devDependencies": {
-    "@types/compression": "^1.7.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
-    "@types/hpp": "^0.2.1",
-    "@types/http-errors": "^1.8.0",
-    "@types/jest": "^26.0.22",
-    "@types/morgan": "^1.9.2",
-    "@types/sequelize": "^4.28.9",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/yaml": "^1.9.7",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.3",
-    "jshint": "^2.12.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "lerna": "^4.0.0"
   }
 }
