--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,7 +11,7 @@
     "module": "commonjs",                           
     "moduleResolution": "node",             
     "noEmit": false,
-    "outDir": "./build",                              
+    "outDir": "./dist",                              
     "pretty": true,
     "resolveJsonModule": true,
     "rootDir": "./src",         
