--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,7 +5,7 @@
   "author": "Daniel Pfisterer <daniel.pfisterer@power.cloud>",
   "homepage": "https://github.com/pure180/jaxa/blob/make-it-lerna/packages/cli#readme",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "bin": {
     "@jaxa/cli": "bin/jaxa",
     "jaxa": "bin/jaxa"
@@ -34,10 +34,12 @@
     "url": "https://github.com/pure180/jaxa/issues"
   },
   "dependencies": {
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "prompt": "^1.1.0"
   },
   "devDependencies": {
     "@types/esm": "^3.2.0",
+    "@types/prompt": "^1.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
