--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-alpha.1",
   "description": "The basic jaxa cli",
   "author": "Daniel Pfisterer <daniel.pfisterer@power.cloud>",
+  "keywords": [],
   "homepage": "https://github.com/pure180/jaxa/blob/make-it-lerna/packages/cli#readme",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -28,7 +29,8 @@
     "preversion": "npm run lint",
     "test:watch": "cross-env ENV_FILE=./.env.test jest --watch",
     "test": "cross-env ENV_FILE=./.env.test jest",
-    "version": "git add -A src"
+    "version": "git add -A src",
+    "watch": "tsc --watch"
   },
   "bugs": {
     "url": "https://github.com/pure180/jaxa/issues"
