--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,10 +43,12 @@
     "url": "https://github.com/pure180/jaxa/issues"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
