--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "cli-select": "^1.1.2",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "esm": "^3.2.25",
     "minimist": "^1.2.5",
     "prompt": "^1.1.0"
