--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
