--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,13 +47,21 @@
     "prompt": "^1.1.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/esm": "^3.2.0",
+    "@types/jest": "^26.0.22",
     "@types/minimist": "^1.2.1",
+    "@types/morgan": "^1.9.2",
     "@types/prompt": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "jshint": "^2.12.0",
     "nodemon": "^2.0.7",
