--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "jest": "jest --forceExit --detectOpenHandles",
+    "jest": "jest --forceExit --detectOpenHandles --passWithNoTests",
     "lint:fix": "npm run lint --fix",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "postversion": "git push && git push --tags",
@@ -68,5 +68,6 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
-  }
+  },
+  "gitHead": "02eed258309958bcfdc5c8d0f02dcd3bc5c3fdc3"
 }
