--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -89,5 +89,6 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
-  }
+  },
+  "gitHead": "02eed258309958bcfdc5c8d0f02dcd3bc5c3fdc3"
 }
