--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@jaxa/core",
   "version": "1.0.0-alpha.4",
+  "private": false,
   "description": "The base core of just another express application framework",
   "keywords": [
     "express",
@@ -46,19 +47,19 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "helmet": "^4.4.1",
+    "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
-    "openapi-types": "^8.0.0",
+    "openapi-types": "^9.0.0",
     "sequelize": "^6.6.2",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.0.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.2",
+    "winston-daily-rotate-file": "^4.5.5",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
@@ -66,10 +67,10 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "@types/hpp": "^0.2.1",
     "@types/http-errors": "^1.8.0",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^26.0.23",
     "@types/morgan": "^1.9.2",
     "@types/sequelize": "^4.28.9",
     "@types/swagger-ui-express": "^4.1.2",
@@ -77,18 +78,18 @@
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.24.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.2",
     "jshint": "^2.12.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.4"
+    "prettier": "^2.3.0",
+    "ts-jest": "^27.0.1",
+    "typescript": "^4.3.2"
   },
-  "gitHead": "02eed258309958bcfdc5c8d0f02dcd3bc5c3fdc3"
+  "gitHead": "8a2640571c7e332c07d5955f7e5a60ab92d851c4"
 }
