prepare core to be used as package

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -68,5 +68,6 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
-  }
+  },
+  "gitHead": "64fad1b9924a0d98d229a8762e65e8a556c530e5"
 }
