--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -90,5 +90,6 @@
     "prettier": "^2.3.0",
     "ts-jest": "^27.0.1",
     "typescript": "^4.3.2"
-  }
+  },
+  "gitHead": "6a3388461a303be50c3619700a1f118ab2613e8d"
 }
