--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,6 +44,10 @@
     "url": "https://github.com/pure180/jaxa/issues"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.2",
+    "@types/validator": "^13.1.3",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -52,12 +56,15 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.1",
     "openapi-types": "^9.0.0",
     "sequelize": "^6.6.2",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.0.0",
+    "validator": "^13.6.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
     "yaml": "^1.10.2"
@@ -71,6 +78,7 @@
     "@types/hpp": "^0.2.1",
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "@types/sequelize": "^4.28.9",
     "@types/swagger-ui-express": "^4.1.2",
@@ -91,5 +99,5 @@
     "ts-jest": "^27.0.1",
     "typescript": "^4.3.2"
   },
-  "gitHead": "6a3388461a303be50c3619700a1f118ab2613e8d"
+  "gitHead": "011a9a8c77a2c5f3ffde853c054bd1a1f77bc48b"
 }
