--- a/packages/authentication/package.json
+++ b/packages/authentication/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/authentication",
-  "version": "1.0.0-alpha.13",
+  "version": "1.0.0-alpha.15",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/pure180/jaxa.git"
   },
   "scripts": {
-    "build": "npm run lint && tsc",
+    "build": "npm run lint && tsc --build --clean && tsc",
     "dev": "cross-env NODE_ENV=development nodemon --inspect",
     "jest": "jest --forceExit --detectOpenHandles",
     "lint:fix": "npm run lint --fix",
@@ -62,7 +62,9 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/core": "^1.0.0-alpha.13",
+    "@jaexa/model": "^1.0.0-alpha.13",
+    "@jaexa/service": "^1.0.0-alpha.13",
+    "@jaexa/utils": "^1.0.0-alpha.16",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
@@ -78,5 +80,6 @@
     "semi": true,
     "arrowParents": "avoid",
     "endOfLine": "auto"
-  }
+  },
+  "gitHead": "a0ee8607269ca80827daf915bc75d4e54314dd15"
 }
