--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/controller",
-  "version": "1.0.0-alpha.13",
+  "version": "1.0.0-alpha.14",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/pure180/jaxa.git"
   },
   "scripts": {
-    "build": "npm run lint && tsc",
+    "build": "npm run lint && tsc --build --clean && tsc",
     "dev": "cross-env NODE_ENV=development nodemon --inspect",
     "jest": "jest --forceExit --detectOpenHandles",
     "lint:fix": "npm run lint --fix",
@@ -29,7 +29,7 @@
     "preversion": "npm run lint",
     "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
     "test:watch": "cross-env ENV_FILE=./.env.test jest --watch",
-    "test": "cross-env ENV_FILE=./.env.test jest",
+    "test": "cross-env ENV_FILE=./.env.test jest --passWithNoTests",
     "version": "git add -A src",
     "watch": "tsc --watch"
   },
@@ -63,7 +63,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/core": "^1.0.0-alpha.13",
+    "@jaexa/model": "^1.0.0-alpha.13",
+    "@jaexa/service": "^1.0.0-alpha.13",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "sequelize": "^6.6.5"
@@ -76,5 +77,6 @@
     "semi": true,
     "arrowParents": "avoid",
     "endOfLine": "auto"
-  }
+  },
+  "gitHead": "a0ee8607269ca80827daf915bc75d4e54314dd15"
 }
