--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -17,9 +17,9 @@
     "url": "git+https://github.com/pure180/jaxa.git"
   },
   "scripts": {
-    "build": "npm run lint && tsc",
+    "build": "npm run lint && tsc --build --clean && tsc",
     "dev": "cross-env NODE_ENV=development nodemon --inspect",
-    "jest": "jest --forceExit --detectOpenHandles",
+    "jest": "jest --forceExit --detectOpenHandles --passWithNoTests",
     "lint:fix": "npm run lint --fix",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/ --resolve-plugins-relative-to .",
     "postversion": "git push && git push --tags",
@@ -36,7 +36,7 @@
     "url": "https://github.com/pure180/jaxa/issues"
   },
   "dependencies": {
-    "@jaexa/core": "^1.0.0-alpha.13"
+    "@jaexa/core": "^1.0.0-alpha.14"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
@@ -47,5 +47,6 @@
     "prettier": "^2.3.0",
     "ts-jest": "^27.0.1",
     "typescript": "^4.3.2"
-  }
+  },
+  "gitHead": "a0ee8607269ca80827daf915bc75d4e54314dd15"
 }
