--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/utils",
-  "version": "1.0.0-alpha.13",
+  "version": "1.0.0-alpha.16",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/pure180/jaxa.git"
   },
   "scripts": {
-    "build": "npm run lint && tsc",
+    "build": "npm run lint && tsc --build --clean && tsc",
     "dev": "cross-env NODE_ENV=development nodemon --inspect",
     "jest": "jest --forceExit --detectOpenHandles",
     "lint:fix": "npm run lint --fix",
@@ -64,7 +64,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/core": "^1.0.0-alpha.13",
+    "@jaexa/model": "^1.0.0-alpha.13",
+    "@types/jest": "^27.0.3",
     "dotenv": "^10.0.0",
     "sequelize": "^6.6.5",
     "winston": "^3.3.3",
@@ -79,5 +80,6 @@
     "semi": true,
     "arrowParents": "avoid",
     "endOfLine": "auto"
-  }
+  },
+  "gitHead": "a0ee8607269ca80827daf915bc75d4e54314dd15"
 }
