--- a/packages/authentication/package.json
+++ b/packages/authentication/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/authentication",
-  "version": "1.0.0-alpha.15",
+  "version": "1.0.0-beta.1",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -62,9 +62,9 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/model": "^1.0.0-alpha.13",
-    "@jaexa/service": "^1.0.0-alpha.13",
-    "@jaexa/utils": "^1.0.0-alpha.16",
+    "@jaexa/model": "^1.0.0-beta.1",
+    "@jaexa/service": "^1.0.0-beta.1",
+    "@jaexa/utils": "^1.0.0-beta.1",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
