--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/controller",
-  "version": "1.0.0-alpha.14",
+  "version": "1.0.0-beta.1",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -63,8 +63,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/model": "^1.0.0-alpha.13",
-    "@jaexa/service": "^1.0.0-alpha.13",
+    "@jaexa/model": "^1.0.0-beta.1",
+    "@jaexa/service": "^1.0.0-beta.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "sequelize": "^6.6.5"
