--- a/packages/sequelizer/package.json
+++ b/packages/sequelizer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/sequelizer",
-  "version": "1.0.0-alpha.13",
+  "version": "1.0.0-beta.1",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -63,8 +63,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/model": "^1.0.0-alpha.13",
-    "@jaexa/utils": "^1.0.0-alpha.16",
+    "@jaexa/model": "^1.0.0-beta.1",
+    "@jaexa/utils": "^1.0.0-beta.1",
     "sequelize": "^6.6.5"
   },
   "prettier": {
