--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/service",
-  "version": "1.0.0-alpha.13",
+  "version": "1.0.0-beta.1",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -64,8 +64,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/model": "^1.0.0-alpha.13",
-    "@jaexa/sequelizer": "^1.0.0-alpha.13",
+    "@jaexa/model": "^1.0.0-beta.1",
+    "@jaexa/sequelizer": "^1.0.0-beta.1",
     "http-errors": "^1.8.0",
     "nodemailer": "^6.6.5",
     "sequelize": "^6.6.5"
