--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/template",
-  "version": "1.0.0-alpha.13",
+  "version": "1.0.0-beta.1",
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <ap8498@lan.huk-coburg.de>",
   "homepage": "https://github.com/pure180/jaxa/tree/main/packages/template#readme",
@@ -36,7 +36,7 @@
     "url": "https://github.com/pure180/jaxa/issues"
   },
   "dependencies": {
-    "@jaexa/core": "^1.0.0-alpha.14"
+    "@jaexa/core": "^1.0.0-beta.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
