--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/jaexa",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "private": false,
   "description": "Just another eXpress API",
   "main": " ",
