--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/cli",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "The basic jaexa cli",
   "author": "Daniel Pfisterer <daniel.pfisterer@power.cloud>",
   "keywords": [],
