--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/model",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -63,8 +63,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/authentication": "^1.0.0-beta.2",
-    "@jaexa/controller": "^1.0.0-beta.2",
+    "@jaexa/authentication": "^1.0.0",
+    "@jaexa/controller": "^1.0.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
