--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaexa/utils",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "private": false,
   "description": "> TODO: description",
   "author": "Daniel Pfisterer <info@daniel-pfisterer.de>",
@@ -64,7 +64,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@jaexa/model": "^1.0.0-beta.2",
+    "@jaexa/model": "^1.0.0",
     "@types/jest": "^27.0.3",
     "dotenv": "^10.0.0",
     "sequelize": "^6.6.5",
