--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -63,6 +63,7 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "http-errors": "^1.8.0",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
