Assign swagger package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,6 +49,7 @@
     "@jaexa/controller": "^1.0.0",
     "@jaexa/model": "^1.0.0",
     "@jaexa/sequelizer": "^1.0.0",
+    "@jaexa/swagger": "^1.0.0",
     "@jaexa/utils": "^1.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.175",
