--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -10,7 +10,9 @@
     "lib": "dist"
   },
   "files": [
-    "dist"
+    "config",
+    "dist",
+    "src"
   ],
   "repository": {
     "type": "git",
