--- a/packages/template/tsconfig.json
+++ b/packages/template/tsconfig.json
@@ -1,9 +1,25 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {                
+  "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["es2020", "dom", "esnext.asynciterable"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmit": false,
     "outDir": "./dist",
-    "rootDir": "./src",                                       
-    "typeRoots": ["./node_modules/@types"],                  
+    "pretty": true,
+    "resolveJsonModule": true,
+    "rootDir": "./src",
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "ES2020",
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src/**/*", ".env"],
   "exclude": ["node_modules", "src/**/*__tests__"]
